registry/registry-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: registry-deployment
  namespace: mlops
  labels:
    app: registry-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: registry
  template:
    metadata:
      labels:
        app: registry
    spec:
      containers:
      - name: registry-server
        image: registry:2.8.3
        ports:
        - containerPort: 5000
        command:
        - /bin/registry
        - serve
        - /etc/docker/registry/config.yml
        volumeMounts:
        - name: registry-storage
          mountPath: "/var/lib/registry"
        - name: registry-certs
          mountPath: "/etc/ssl/docker"
          readOnly: true
        - name: registry-auth
          mountPath: "/auth"
          readOnly: true
        resources:
          requests:
            cpu: 100m
            memory: 128Mi
          limits:
            cpu: 200m
            memory: 256Mi
        readinessProbe:
          httpGet:
            scheme: HTTPS
            path: /
            port: 5000
        livenessProbe:
          httpGet:
            scheme: HTTPS
            path: /
            port: 5000
      volumes:
      - name: registry-storage
        persistentVolumeClaim:
          claimName: registry-pvc
      - name: registry-certs
        secret:
          secretName: registry-tls
      - name: registry-auth
        secret:
          secretName: registry-auth-secret
          items:
          - key: htpasswd
            path: htpasswd
