registry/registry-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: registry-service
  namespace: mlops
  labels:
    app: registry-service
spec:
  type: ClusterIP
  selector:
    app: registry
  ports:
  - name: tcp
    protocol: TCP
    port: 5000
    targetPort: 5000
